Experimenting with new mobile search footer formatting... Fixing financing which broken on the JS side and the php side

--- a/resources/assets/sass/components/deals.scss
+++ b/resources/assets/sass/components/deals.scss
@@ -85,15 +85,25 @@
     right: 0;
     position: fixed;
     background: #fff;
-    border-top: 3px solid $primary;
+    border-top: 2px solid $primary;
     text-align: center;
     box-shadow: 0 -0.125rem 0.25rem rgba(0, 0, 0, 0.075);
     z-index: 50;
-    span {
-        display: block;
+    display: flex;
+    > span {
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        flex: 1;
         cursor: pointer;
         padding: 0.5rem 1rem;
+        border-right: 2px solid $primary;
+        &:last-child {
+            border-right: 0;
+        }
         svg {
+            position: relative;
+            top: -2px;
             margin-right: 0.25rem;
         }
     }
